dodanie taskType'a